[package]
name = "guid_win"
description = "Windows GUID/CLSID/IID string and binary serialization"
keywords = ["windows", "com", "win32"]
categories = ["api-bindings", "os::windows-apis"]
version = "0.1.0-alpha"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[features]
guid_serde = ["serde", "serde_derive"]

[dependencies]
comedy = "0.1.0-alpha"
lpwstr = "0.1.0-alpha"
winapi = { version = "0.3.6", features = ["combaseapi", "guiddef"] }

serde = { version = "1.0.80", optional = true }
serde_derive = { version = "1.0.80", optional = true }
